--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bliss-express",
-  "description": "Bliss for Express.js",
+  "description": "Bliss for Express",
   "version": "1.0.1",
   "author": {
     "name": "Andre Ventura",
